--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Body and text styling */
 body {
 }
 
@@ -21,6 +22,72 @@ h6 {
   color: #757575 !important;
 }
 
+/* Main game frame styling */
 div.codewith {
   margin-right: 30px;
+}
+
+div.game {
+  display: none;
+  width: 100%;
+  height: 100%;
+}
+
+div.board {
+  width: 100%;
+  height: 80%;
+}
+
+div.controls {
+  width: 100%;
+  height: 20%;
+  background-color: #efefef;
+}
+
+div.flat-line {
+  width: 100%;
+  height: 10%;
+}
+
+div.flat-block {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  height: 100%;
+  display: inline-block;
+  border: 1px solid rgba(0,0,0,0.05);
+}
+
+/* Control colors */
+
+div.colors {
+  width: 16.34%;
+  height: 100%;
+  display: inline-block;
+  margin: 0px;
+  padding: 0px;
+}
+
+div#red {
+  background-color: #e74c3c;
+}
+
+div#green {
+  background-color: #2ecc71;
+}
+
+div#lightblue {
+  background-color: #3498db;
+}
+
+div#darkblue {
+  background-color: #34495e;
+}
+
+div#purple {
+  background-color: #9b59b6;
+}
+
+div#yellow {
+  background-color: #f1c40f;
 }
