--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,6 @@ div.board {
 div.controls {
   width: 100%;
   height: 20%;
-  background-color: #efefef;
 }
 
 div.flat-line {
@@ -58,14 +57,23 @@ div.flat-block {
   border: 1px solid rgba(0,0,0,0.05);
 }
 
+div.colored-block {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  height: 100%;
+  display: inline-block;
+  border: 1px solid rgba(0,0,0,0.05);
+}
+
 /* Control colors */
 
 div.colors {
-  width: 16.34%;
+  width: 16.1% !important;
   height: 100%;
   display: inline-block;
-  margin: 0px;
-  padding: 0px;
+  padding: 0px !important;
+  margin: 0 auto !important;
 }
 
 div#red {
